# c-git-version

./: CMakeLists.txt  README.md
cmake/: CGitVersion.cmake  DoxygenGitVersion.cmake  GetGitVersion.cmake  UpdateDoxyfileVersion.cmake
inc/: c_git_version.h
src/: c_git_version.c.in
